--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
-    "name": "Aluracord - Dark (biaquintino)",
+    "name": "Aluracord - Dark",
     "theme": {
       "colors": {
         "primary": {
-          "050": "#E3F9E5",
+          "050": "#2e4553",
           "100": "#C1EAC5",
           "200": "#A3D9A5",
           "300": "#7BC47F",
