--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "name": "Aluracord - Dark",
+    "name": "Aluracord",
     "theme": {
       "colors": {
         "primary": {
@@ -18,6 +18,8 @@
         "neutrals": {
           "000": "#FFFFFF",
           "050": "#F5F7FA",
+          "060": "#d7c5b7",
+          "070": "#d6d0d8",
           "100": "#E4E7EB",
           "200": "#CBD2D9",
           "300": "#9AA5B1",
